Mon Oct 21 22:05:48 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* i386/csw.S (CALL_MCOUNT): New macro.
	(cproc_swtich, cproc_start_wait, cproc_prepare): Use CALL_MCOUNT.

	* rwlock.h: Change extern inline protection to use new canonical
	method.
	* rwlock.c: Rewritten.

Wed Sep  4 09:06:09 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (VPATH): Look in $(asm_syntax) instead of old
	$(machine); Hurd configure now folds equivalent CPU types into
	asm_syntax. 

Thu Aug 29 12:50:37 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* i386/csw.S: Include <mach/i386/asm.h> instead of <i386/asm.h>.
	Define ELF before inclusion.

Sat Jul 20 15:47:24 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (lndist-i386-files): Look for I386SRCS and I386HDRS in
	$(srcdir). 

Thu Jun  6 07:29:31 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* malloc.c (more_memory): Use assert_perror instead of MACH_CALL.
	"cthread_internals.h": Include removed.

Thu May  9 11:13:42 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (installhdrs, installhdrsubdir): Install headers using
	the generic technique, now that installhdrsubdir is available. 

	* rwlock.h: If _RWLOCK_DEFINE_FUNCTIONS is defined, then clear
 	_EXTERN_INLINE, but *after* header files have been included.
	* rwlock.c (_RWLOCK_DEFINE_FUNCTIONS): New macro; use in place of
 	clearing _EXTERN_INLINE, which conflicts with machine-sp.h.

Sat May  4 05:33:57 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* cthreads.h [lint] (NEVER): Spurious global variable removed.
	[!lint] (NEVER): Useless macro removed.

	* Makefile (SRCS): Add rwlock.c.
	(LCLHDRS): Add rwlock.h.
	(install): Depend on $(includedir)/rwlock.h.
	($(includedir)/%.h: %.h): New rule.
	($(includedir)/cthreads.h): Target removed, obviated by that rule.
	* rwlock.h: Moved to libthreads from libshouldbeinlibc.
	(_EXTERN_INLINE): New macro.
	Use it for all the inline defns.
	* rwlock.c: New file.
